@@ -53,6 +53,11 @@ proc setup_test { executable } {
 
     if { [lindex $result 0] != "" } then {
 	return -1
+    } else {
+        if { [lsearch -exact [lrange $result 1 end] "nodebug"] >= 0 } then {
+            untested "No debug information, skipping testcase."
+            return -1
+        }
     }
 
     # Set a breakpoint at main
