@@ -1,3 +1,11 @@
+2004-09-01  Manoj Iyer  <manjo@austin.ibm.com>
+
+	* gdb.gdb/complaints.exp (setup_test): use new gdb.exp functionality
+	to check for nodebug in executable.
+	* gdb.gdb/observer.exp (setup_test): Likewise.
+	* gdb.gdb/selftest.exp (test_with_self): Likewise.
+	* gdb.gdb/xfullpath.exp (setup_test): Likewise.
+
 2004-09-01  Andrew Cagney  <cagney@gnu.org>
 
 	* gdb.threads/staticthreads.c, gdb.threads/staticthreads.exp: New
